k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: java-app
  labels:
    app.kubernetes.io/name: java-app
    managed-by: kubectl
