k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-app-service
  namespace: java-app
  labels:
    app: java-app
spec:
  type: LoadBalancer
  selector:
    app: java-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
